--- a/main.html
+++ b/main.html
@@ -8,7 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <script type="text/javascript" src="./script.js">'
+	<form>
+	<label>Name*</label>
+	<input>
+	<label>Email*</label>
+	<input>
+	<label>Gender*</label>
+	<input>
+	<label>Laptop Brand*</label>
+	<input>
+	<label>Age*</label>
+	<input>
+	<label>DOB*</label>
+	<input>
+	<label>Password*</label>
+	<input>
+	<submit>
+	</form>
 </script>
 
 </body>
